# Astro-Ligo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/metrics/: canonical_comparison_table.txt  model_comparison.json  test_predictions.csv
data/models/: test_split.csv
data/processed/: ns_dataset.csv  raw_observations.csv
src/ns_infer/: run_pipeline.py
src/ns_infer/data/: __init__.py  dataset_builder.py  observational_data.py
src/ns_infer/evaluation/: __init__.py  compare_models.py  plot_results.py
src/ns_infer/models/: __init__.py  train_bnn.py  train_dnn.py  train_xgboost.py
src/ns_infer/physics/: __init__.py  test_physics.py  tov_solver.py
